--- a/crm_app/templates/crm/Product/product_load.html
+++ b/crm_app/templates/crm/Product/product_load.html
@@ -1,4 +1,5 @@
 {% extends "crm/base/base.html" %}
+{% load user_roles %}
 {% load custom_filters %}
 {% load static %}
 {% block main-content %}
@@ -130,10 +131,12 @@
                         hx-indicator=".htmx-indicator">
                      <i class="ri-search-line search-icon"></i>
                   </div>
+                  {% if request.user|has_access:"2,3" %}
                   <button class="btn btn-primary add-btn" hx-get="{% url "add_package" %}" hx-target="#dialog">
                      <i class="ri-add-line align-middle me-1"></i> Add Package
                   </button>
                </div>
+               {% endif %}
             </div>
             
             <div class="card_product">
