added package creations

--- a/crm_app/templates/crm/base/navbar.html
+++ b/crm_app/templates/crm/base/navbar.html
@@ -448,6 +448,12 @@
                </a>
                
             </li>
+            <li class="nav-item">
+               <a class="nav-link menu-link"  href="https://travel.theskytrails.com/itinerary?token={{ token }}&redirectURL=packagecreationhome&isDummy=false">
+               <i class="ri-pencil-ruler-2-line"></i> <span data-key="t-widgets">Package Creation</span>
+               </a>
+               
+            </li>
             {% endwith %}
             {% endif %}
             {% endif %}
