--- a/crm_app/templates/crm/login.html
+++ b/crm_app/templates/crm/login.html
@@ -429,7 +429,7 @@
             <div class="contact-info">
               <div class="logo-container">
                 <!-- <img src="{% static 'assets/images/hh.png' %}" alt="SkyTrails Logo" /> -->
-                <img src="{% static "assets/images/logoSky.png" %}" alt="SkyTrails Logo" >
+                <img src="{% static "assets/images/" %}" alt="SkyTrails Logo" >
               </div>
               <div class="contact-details">
                 <a href="tel:+91-9209793097"><i class="fas fa-phone"></i> +91-9209793097</a>
