production cashfree change

--- a/crm_app/templates/crm/base/base.html
+++ b/crm_app/templates/crm/base/base.html
@@ -295,7 +295,7 @@
 </script> {% endcomment %}
 
     <script>
-        const cashfree = Cashfree({ mode: "sandbox" });
+        const cashfree = Cashfree({ mode: "production" });
 
         document.getElementById("rechargeBtn").addEventListener("click", function (e) {
             e.preventDefault();
