new ai visa form updated

--- a/crm_app/templates/crm/Leads/all_lead.html
+++ b/crm_app/templates/crm/Leads/all_lead.html
@@ -244,7 +244,7 @@
        <ul class="list-inline hstack gap-2 mb-0">
          
           <li class="list-inline-item edit" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-placement="top" title="Edit">
-             <a href="{% url "personal_info" i.id %}"  class="text-primary d-inline-block edit-item-btn">
+             <a href="{% url "enq_documents" i.id %}"  class="text-primary d-inline-block edit-item-btn">
              <i class="ri-pencil-fill fs-16"></i>
              </a>
           </li>
