--- a/crm_app/templates/crm/base/navbar.html
+++ b/crm_app/templates/crm/base/navbar.html
@@ -418,11 +418,14 @@
                      
                      <li class="nav-item">
                         {% if request.user.is_authenticated %}
-                        {% with request.session.access_token as token %}
+                        <a class="nav-link menu-link"  href="{% url "ai_index" %}">
+                           <i class="ri-pencil-ruler-2-line"></i> Visa
+                        </a>
+                        {% comment %} {% with request.session.access_token as token %}
                         <a class="nav-link menu-link"  href="https://travel.theskytrails.com/itinerary?token={{ token }}&redirectURL=visa&isDummy=false">
                            <i class="ri-pencil-ruler-2-line"></i> Visa
                            </a>
-                        {% endwith %}
+                        {% endwith %} {% endcomment %}
                         {% endif %}
                        
                      </li>
