--- a/crm_app/templates/crm/AIPages/reviewA.html
+++ b/crm_app/templates/crm/AIPages/reviewA.html
@@ -3782,7 +3782,7 @@ body {
         &copy; | Powered by The SkyTrails
       </div>
       <div>
-        <a href="upload2.html">
+        <a href="{% url "ai_upload2" %}">
         <button class="btn btn-secondary me-2">Go Back</button></a>
         <a href="{% url "ai_submit" %}">
         <button class="btn btn-submit-custom">Submit</button></a>
