--- a/crm_app/templates/crm/AIPages/submit.html
+++ b/crm_app/templates/crm/AIPages/submit.html
@@ -533,7 +533,7 @@ body {
         &copy; | Powered by The Skytrails
       </div>
       <div>
-        <a href="reviewA.html">
+        <a href="{% url "ai_review" %}">
         <button class="btn btn-secondary me-2">Go Back</button></a>
         
       </div>
